# xiuxian_core

./: README.md  pyproject.toml
xiuxian_core/: models.py  segment.py  trigger.py
